Add clear errors and old form inputs

--- a/investors/ir-contact.html
+++ b/investors/ir-contact.html
@@ -77,6 +77,8 @@
                     else {
                         // console.log('Success');
                         alert('Email has been sent to our staff.');
+                        clearErrors();
+                        clearFields();
                     }
                 } catch (e) {
                     console.error(e.message);
