--- a/investors/ir-contact.html
+++ b/investors/ir-contact.html
@@ -222,7 +222,7 @@
                         <textarea class="form-control" name="information" id="information" rows="4"></textarea>
                         <div id="information-error" style="color:red"></div>
                     </div>
-                    <button type="button" name="submit-btn" id="submit-btn" class="btn btn-primary">Submit</button>
+                    <button type="button" name="submit-btn" id="submit-btn" class="btn btn-primary" style="background-color:#1f5026;">Submit</button>
                 </form>
             </div>            
         </div>
