--- a/investors/cg-policy.html
+++ b/investors/cg-policy.html
@@ -22,7 +22,7 @@
     }
 </style>
 
-{% include "investors/_topbar-new" %}
+{% include "_topbar" %}
 
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/head9.png');" data-img-width="1600" data-diff="100">
     <div class="content-a">
