--- a/investors/email-alert.html
+++ b/investors/email-alert.html
@@ -2,7 +2,7 @@
 {% include "_header2" %}
 {% set top = 4 %}
 
-{% include "investors/_topbar-new" %}
+{% include "_topbar" %}
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
