--- a/investors/_financial-statements-index.html
+++ b/investors/_financial-statements-index.html
@@ -2,7 +2,7 @@
 {% include "_header2" %}
 {% set top = 4 %}
 
-{% include "investors/_topbar-new" %}
+{% include "_topbar" %}
 
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/work-banner1.jpg');" data-img-width="1600" data-diff="100">
     <div class="content-a">
