--- a/investors/test.html
+++ b/investors/test.html
@@ -2,11 +2,11 @@
 {% include "_header2" %}
 {% set top = 4 %}
 
-{% include "investors/_topbar-new" %}
+{% include "/investors/_topbar-new" %}
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/head9.png');" data-img-width="1600" data-diff="100">
     <div class="content-a">
         <div class="content-b">
-            <h1 class="{% if craft.i18n.getCurrentLocale() == 'th' %}rsubold{% else %}montserrat-bold{% endif %} fonts">INVESTORS</h1>
+            <h1 class="{% if craft.i18n.getCurrentLocale() == 'th' %}rsubold{% else %}montserrat-bold{% endif %} fonts">INVESTORS TEST</h1>
         </div>
     </div>
 </section>
