--- a/investors/_annual-reports-sidebar.html
+++ b/investors/_annual-reports-sidebar.html
@@ -6,7 +6,7 @@
     <div class="sidebar set-height">
         <!-- side-widget -->
         <div class="side-widget">                        
-            <h4>{{ craft.entries.section('annualReportsPage').first().title }}</h4>
+            <h4> {% if craft.i18n.getCurrentLocale() == 'th' %}รายงานประจำปี{% else %}{{ craft.entries.section('annualReportsPage').first().title }}{% endif %}</h4>
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 {% set categories = craft.categories.group('annualReportsCategoryGroup').level(1) %}
                 {% nav keys, category in categories %}
