--- a/investors/_form561-sidebar.html
+++ b/investors/_form561-sidebar.html
@@ -5,7 +5,11 @@
     {% set open = 0 %}
     <div class="sidebar set-height">
         <div class="side-widget">                        
-            <h4>{{ craft.entries.section('form561Page').first().title }}</h4>
+            {% if craft.i18n.getCurrentLocale() == 'th' %}
+                <h4>แบบฟอร์ม 56-1</h4>
+            {% else %}
+                <h4>{{ craft.entries.section('form561Page').first().title }}</h4>
+            {% endif %}
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 {% set categories = craft.categories.group('form561CategoryGroup').level(1) %}
                 {% nav keys, category in categories %}
