--- a/investors/_set-announcements-sidebar.html
+++ b/investors/_set-announcements-sidebar.html
@@ -5,7 +5,11 @@
     {% set open = 0 %}
     <div class="sidebar set-height">
         <div class="side-widget">
-            <h4>{{ craft.entries.section('setAnnouncementsPage').first().title }}</h4>
+            {% if craft.i18n.getCurrentLocale() == 'th' %}
+                <h4>ข่าวแจ้งตลาดหนักทรัพย์</h4>
+            {% else %}
+                <h4>{{ craft.entries.section('setAnnouncementsPage').first().title }}</h4>
+            {% endif %}
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 {% set categories = craft.categories.group('setAnnouncementsCategoryGroup').level(1) %}
                 {% nav keys, category in categories %}
