--- a/investors/_vdo-clips-sidebar.html
+++ b/investors/_vdo-clips-sidebar.html
@@ -4,8 +4,12 @@
     {% endif %}
     {% set open = 0 %}
     <div class="sidebar set-height">
-        <div class="side-widget">                        
-            <h4>{{ craft.entries.section('vdoClipsPage').first().title }}</h4>
+        <div class="side-widget">  
+            {% if craft.i18n.getCurrentLocale() == 'th' %}                      
+                <h4>VDO</h4>
+            {% else %}
+                <h4>{{ craft.entries.section('vdoClipsPage').first().title }}</h4>
+            {% endif %}
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 {% set categories = craft.categories.group('vdoClipsCategoryGroup').level(1) %}
                 {% nav keys, category in categories %}
