--- a/investors/_webcasts-presentations-entry.html
+++ b/investors/_webcasts-presentations-entry.html
@@ -6,7 +6,11 @@
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/head9.png');" data-img-width="1600" data-diff="100">
     <div class="content-a">
         <div class="content-b" style="text-transform: uppercase;">
-            <h1 class="{% if craft.i18n.getCurrentLocale() == 'th' %}rsubold{% else %}montserrat-bold{% endif %} fonts">{{ menuGlobal.publicationsMenu }}</h1>
+            {% if craft.i18n.getCurrentLocale() == 'th' %}
+                <h1 class="rsubold fonts">สิ่งตีพิมพ์</h1>
+            {% else %}
+                <h1 class="montserrat-bold fonts">{{ menuGlobal.publicationsMenu }}</h1>
+            {% endif %}
         </div>
     </div>
 </section>
