--- a/investors/cg-policy.html
+++ b/investors/cg-policy.html
@@ -27,7 +27,11 @@
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/head9.png');" data-img-width="1600" data-diff="100">
     <div class="content-a">
         <div class="content-b" style="text-transform: uppercase;">
-            <h1 class="{% if craft.i18n.getCurrentLocale() == 'th' %}rsubold{% else %}montserrat-bold{% endif %} fonts">{{ menuGlobal.corporateGovernanceMenu }}</h1>
+            {% if craft.i18n.getCurrentLocale() == 'th' %}
+                <h1 class="rsubold fonts">{{ menuGlobal.corporateGovernanceMenuThai }}</h1>
+            {% else %}
+                <h1 class="montserrat-bold fonts">{{ menuGlobal.corporateGovernanceMenu }}</h1>
+            {% endif %}
         </div>
     </div>
 </section>
@@ -48,7 +52,11 @@
     <div class="container" align="center" sytle="display:inline;" width="60%">
         <div class="row">
             <div class="col-12">
-               <h3 class="heading">COPORATE GOVERNANCE</h3>
+                {% if craft.i18n.getCurrentLocale() == 'th' %}
+                    <h3 class="heading">นโยบายการกำกับดูแลกิจการ</h3>
+                {% else %}
+                    <h3 class="heading">{{ craft.entries.section('cgPolicy').first().title }}</h3>
+                {% endif %}
             </div>
         </div>
         <div class="row">
