--- a/investors/financial-highlights.html
+++ b/investors/financial-highlights.html
@@ -16,7 +16,11 @@
 <section class="title-page parallax" style="background-image:url('{{ craft.config.environmentVariables.baseUrl }}assets/img/head9.png');" data-img-width="1600" data-diff="100">
     <div class="content-a">
         <div class="content-b" style="text-transform: uppercase;">
-            <h1 class="{% if craft.i18n.getCurrentLocale() == 'th' %}rsubold{% else %}montserrat-bold{% endif %} fonts">{{ menuGlobal.financialInfoMenu }}</h1>
+            {% if craft.i18n.getCurrentLocale() == 'th' %}
+                <h1 class="rsubold fonts">{{ menuGlobal.financialInfoMenuThai }}</h1>
+            {% else %}
+                <h1 class="montserrat-bold fonts">{{ menuGlobal.financialInfoMenu }}</h1>
+            {% endif %}
         </div>
     </div>
 </section>
@@ -30,7 +34,11 @@
     </div>
     -->    
     <div class="sectional-header">
-        <h3 class="heading">{{ craft.entries.section('financialHighlights').first().title }}</h3>
+        {% if craft.i18n.getCurrentLocale() == 'th' %}
+            <h3 class="heading">ข้อมูลทางการเงินที่สำคัญ</h3>
+        {% else %}
+            <h3 class="heading">{{ craft.entries.section('financialHighlights').first().title }}</h3>
+        {% endif %}
     </div>
     <div class="container" align="center">
         <img src="{{ craft.config.environmentVariables.baseUrl }}assets/images/investor/GEL-Financial-Hightlights1.png">
