--- a/investors/whistle-blowing-other.html
+++ b/investors/whistle-blowing-other.html
@@ -17,9 +17,9 @@
     <div class="content-a">
         <div class="content-b" style="text-transform: uppercase;">
             {% if craft.i18n.getCurrentLocale() == 'th' %}
-                <h1 class="rsubold fonts">{{ menuGlobal.shareholderInfoMenuThai }}</h1>
+                <h1 class="rsubold fonts">{{ menuGlobal.corporateGovernanceMenuThai }}</h1>
             {% else %}
-                <h1 class="montserrat-bold fonts">{{ menuGlobal.shareholderInfoMenu }}</h1>
+                <h1 class="montserrat-bold fonts">{{ menuGlobal.corporateGovernanceMenu }}</h1>
             {% endif %}
         </div>
     </div>
@@ -27,7 +27,7 @@
 
 <section class="section _toppd-60 _bottompd-100">
     <div class="sectional-header">
-        <h3 class="heading">{{ craft.entries.section('irCalendar').first().title }}</h3>
+        <h3 class="heading">{{ craft.entries.section('whistleBlowingOther').first().title }}</h3>
     </div>
     <div class="container" style="width:70%; padding-left: 50px;">
         <p style="text-align:justify;">      
