--- a/investors/whistle-blowing.html
+++ b/investors/whistle-blowing.html
@@ -21,7 +21,7 @@
 <section class="section _toppd-60 _bottompd-100">
     
     <div class="sectional-header">
-        <h3 class="heading">{% if craft.i18n.getCurrentLocale() == 'th' %}รับข้อร้องเรียน{% else %}{{ craft.entries.section('whistleBlowing').first().title }}{% endif %}</h3>  
+        <h3 class="heading">{{ craft.entries.section('whistleBlowing').first().title }}</h3>  
     </div>
 
     <!--
